# Mist_playground

./: .gitignore  .gitmodules  README.md
CMake/: 3rdParty.CMake  Gen-VS2015.bat  Gen-VS2017.bat  Gen.bat  Utilities.CMake
Data/Config/: Platform.json  Plugins.json
Data/InitData/: Paths.json
Data/Plugins/: Platform.ilk  Rendering.ilk
Data/Rendering/Pipelines/: PlaygroundPipeline.json
Data/Rendering/Shaders/: Playground.frag  Playground.vert
Include/Systems/: ISystem.h  ISystemProvider.h  SystemCollection.h
Include/Utility/: INameable.h
Lib/: Game.exp  Game.lib  Mist_Common.lib  Mist_plugin-loader.lib
Projects/Windows/: Playground.vcxproj  Playground.vcxproj.filters
Source/: CMakeLists.txt  main.cpp
Source/Core/: CMakeLists.txt
Source/Core/Math/: Bezier.h  CMakeLists.txt  Matrix.h  Quaternion.h  Rect.h  Serialization.cpp  Serialization.h  Transform.h  Vector.h
Source/Core/Systems/: CMakeLists.txt  CoreSystemCollection.cpp  CoreSystemCollection.h  CoreSystemTypes.h  PCoreSystemCollection.h  System.cpp  System.h  SystemEventHandler.cpp  SystemEventHandler.h  SystemProvider.h
Source/Core/Utility/: Algorithm.h  BitManipulations.h  CMakeLists.txt  DynamicArray.h  FileIO.cpp  FileIO.h  INameable.h  Pair.h  String.cpp  String.h  SystemEventHandler.cpp  SystemEventHandler.h
Source/Game/: CMakeLists.txt  main.cpp
Source/Modules/: CMakeLists.txt
Source/Modules/Platform/: CMakeLists.txt  Platform.cpp  Platform.h  PlatformAPI.h  PlatformSystem.cpp  PlatformSystem.h
Source/Modules/Rendering/: CMakeLists.txt  MeshGen.cpp  MeshGen.h  OpenGLRenderer.cpp  Renderer.h  Rendering.cpp  Rendering.h
Source/Modules/RenderingPlayground/: CMakeLists.txt  RenderingPlayground.cpp  RenderingPlayground.h
Source/Tools/: CMakeLists.txt
Source/Tools/AssetConverter/: CMakeLists.txt  main.cpp
